Fix docker-compose node_modules

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   front:
     build:
       dockerfile: "Dockerfile"
+      context: "."  
     volumes: 
       - ./:/app:rw,cached
-      - /app/node_modules
     ports:
       - 3000:3000
     environment:
