--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@types/react-dom": "^18.0.9",
     "aos": "^2.3.4",
     "bootstrap": "^5.2.2",
+    "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.3",
