--- a/.github/workflows/jest-ci.yml
+++ b/.github/workflows/jest-ci.yml
@@ -5,9 +5,19 @@ on: push
 jobs:
   test-front:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [16.x] 
+
     steps:
       - name: Check out code
         uses: actions/checkout@v2
+      - name: Setup node-version ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+          registry-url: 'https://registry.npmjs.org'
       - name: Run tests
         run: npm i && npm test
   
