--- a/.github/workflows/jest-ci.yml
+++ b/.github/workflows/jest-ci.yml
@@ -19,6 +19,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
           registry-url: 'https://registry.npmjs.org'
       - name: Run tests
-        run: node -v && npm -v
-        # run: npm i && npm test
+          run: npm i && npm test
   
