--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
+    "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "^18.0.9",
     "@types/react-redux": "^7.1.25",
     "aos": "^2.3.4",
     "bootstrap": "^5.2.2",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
